external-crates/move/crates/move-compiler/tests/move_2024/expansion/mixed_address_module_empty_invalid_2.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/expansion/mixed_address_module_empty_invalid_2.move:2:16
  │
2 │     module a::b::c;
  │                ^^
  │                │
  │                Unexpected '::'
  │                Expected '{' or ':' after the module name
